--- a/index.html
+++ b/index.html
@@ -1,46 +1,31 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Chris Heuberger by ChrisBup</title>
+<head>
+  <meta charset="utf-8">
+  <title>Chris Heuberger / web developer + designer</title>
+  <link rel="stylesheet" href="stylesheets/styles.css">
+</head>
+<body>
+  <div class="wrapper">
+    <header>
+      <h1>Chris Heuberger</h1>
+      <p>web developer + designer</p>
+    </header>
+    <section>
+      <p>A little about me: I am a full-stack web developer with a background in graphic designer.</p>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Chris Heuberger</h1>
-        <p>web developer + designer</p>
+      <p>I'm interested in how information is organized and presented to convey a message or to create something amazing. I see development as an essential part of design; the function behind the form that allows us to guide how people interact with technology and each other.</p>
 
+      <p>My goal in all my work is to apply principles of behavioral economics—the art and science of how we make decisions—toward design for better interaction, participation and engagement.</p>
 
-        <p class="view"><a href="https://github.com/ChrisBup">View My GitHub Profile</a></p>
-
-      </header>
-      <section>
-        <p>A little about me: I am a full-stack web developer with a background in graphic designer.</p>
-
-<p>I'm interested in how information is organized and presented to convey a message or to create something amazing. I see development as an essential part of design; the function behind the form that allows us to guide how people interact with technology and each other.</p>
-
-<p>My goal in all my work is to apply principles of behavioral economics—the art and science of how we make decisions—toward design for better interaction, participation and engagement.</p>
-
-<pre><code>
-[GitHub](https://github.com/ChrisBup)  
-[LinkedIn](www.linkedin.com/in/chrisheuberger/)
-
-[contact me!](mailto:christopherheuberger@gmail.com)
-</code></pre>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+      <a href='https://github.com/ChrisBup'>GitHub</a>
+      <a href='www.linkedin.com/in/chrisheuberger/'>LinkedIn</a>
+      <a href='mailto:christopherheuberger@gmail.com'>contact me</a>
+    </section>
+    <footer>
+      <p><small>Thanks for reading. &mdash; Have a <a href="http://www.chrisheuberger.com">nice day.</a></small></p>
+    </footer>
+  </div>
+  <script src="javascripts/scale.fix.js"></script>
+</body>
 </html>
