line breaks between links

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
       <p>My goal in all my work is to apply principles of behavioral economics—the art and science of how we make decisions—toward design for better interaction, participation and engagement.</p>
 
-      <a href='https://github.com/ChrisBup'>GitHub</a>
-      <a href='www.linkedin.com/in/chrisheuberger/'>LinkedIn</a>
+      <a href='https://github.com/ChrisBup'>GitHub</a><br>
+      <a href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
       <a href='mailto:christopherheuberger@gmail.com'>contact me</a>
     </section>
     <footer>
