--- a/about.html
+++ b/about.html
@@ -31,10 +31,15 @@
       @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
         .ig-b-v-24 { background-image: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24@2x.png); background-size: 160px 178px; } }</style>
         <a href="http://instagram.com/chrisbup?ref=badge" class="ig-b- ig-b-v-24"><img src="//badges.instagram.com/static/images/ig-badge-view-24.png" alt="Instagram" /></a>
-        <footer>
-          <p><small>Thanks for reading.</small></p>
-        </footer>
-      </div>
+    <footer>
+      <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
+    </footer>
+  </div>
+  <script>
+  $(".quote").on("click", function() {
+    alert("The details are not the details. They make the design. -Charles Eames");
+  });
+  </script>
     </body>
     </html>
 
