--- a/resume.html
+++ b/resume.html
@@ -10,15 +10,16 @@
 <body>
   <div class="wrapper">
     <header>
+      <img src="/images/logo4.png">
       <h1>Chris Heuberger</h1>
       <h2>RESUME</h2>
+      <h3><a class='resume' href="#">download pdf version</a></h3>
       <a href="index.html">home</a>
       <a href="about.html">about</a>
       <a href="work.html">work</a>
       <a href="play.html">play</a>
     </header>
     <section>
-      <a class='resume' href="#">download pdf version</a><br>
 
 <h2>EXPERIENCE</h2>
 
