footer minimum top margin

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
       <a href='https://github.com/ChrisBup'>GitHub</a><br>
       <a href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a href='mailto:christopherheuberger@gmail.com'>contact me</a>
-    </section>
+      <a href='mailto:christopherheuberger@gmail.com'>contact me</a><br>
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
     </footer>
+    </section>
   </div>
   <script>
   $(".quote").on("click", function() {
