--- a/resume.html
+++ b/resume.html
@@ -57,6 +57,7 @@ magazines, brochures, annual reports, invitations, e-newsletters and websites. I
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
     </footer>
+  </section>
   </div>
   <script>
   $(".quote").on("click", function() {
