--- a/work.html
+++ b/work.html
@@ -10,6 +10,7 @@
 <body>
   <div class="wrapper">
     <header>
+      <img src="/images/logo4.png">
       <h1>Chris Heuberger</h1>
       <h2>WORK</h2>
       <a href="index.html">home</a>
@@ -18,11 +19,10 @@
       <a href="play.html">play</a>
     </header>
     <section>
-      <p>test</p>
-      <a href='#'>test</a><br>
-    <footer>
-      <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
-    </footer>
+      <footer>
+        <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
+      </footer>
+    </section>
   </div>
   <script>
   $(".quote").on("click", function() {
