--- a/about.html
+++ b/about.html
@@ -21,37 +21,36 @@
     </header>
 
     <section>
-    <a href="resume.html">resume</a>
-
-    <p>
-      <a href="https://twitter.com/chrisbup" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @chrisbup</a>
-      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-    </p>
-    <style>
+      <a href="resume.html">resume</a>
+      <p>
+        <a href="https://twitter.com/chrisbup" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @chrisbup</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+      </p>
+      <style>
       .ig-b- {
        display: inline-block;
-      }
+     }
      .ig-b- img {
       visibility: hidden;
-      }
-      .ig-b-:hover {
-        background-position: 0 -60px;
-      }
-      .ig-b-:active {
-        background-position: 0 -120px;
-      }
+    }
+    .ig-b-:hover {
+      background-position: 0 -60px;
+    }
+    .ig-b-:active {
+      background-position: 0 -120px;
+    }
+    .ig-b-v-24 {
+      width: 137px;
+      height: 24px;
+      background: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24.png)
+      no-repeat 0 0;
+    }
+    @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
       .ig-b-v-24 {
-        width: 137px;
-        height: 24px;
-        background: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24.png)
-        no-repeat 0 0;
+        background-image: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24@2x.png);
+        background-size: 160px 178px;
       }
-      @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-        .ig-b-v-24 {
-          background-image: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24@2x.png);
-          background-size: 160px 178px;
-        }
-      }
+    }
     </style>
     <a href="http://instagram.com/chrisbup?ref=badge" class="ig-b- ig-b-v-24">
       <img src="//badges.instagram.com/static/images/ig-badge-view-24.png" alt="Instagram" />
@@ -59,12 +58,13 @@
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
     </footer>
-  </div>
-  <script>
-  $(".quote").on("click", function() {
-    alert("The details are not the details. They make the design. -Charles Eames");
-  });
-  </script>
+  </section>
+</div>
+<script>
+$(".quote").on("click", function() {
+  alert("The details are not the details. They make the design. -Charles Eames");
+});
+</script>
 </body>
 </html>
 
