--- a/about.html
+++ b/about.html
@@ -10,51 +10,25 @@
 <body>
   <div class="wrapper">
     <header>
-      <img src="/images/ch-self.png">
-      <h1>Chris Heuberger</h1>
+      <a href="index.html">
+        <img class='logo' src="images/logo4.png">
+        <h1>Chris Heuberger</h1>
+      </a>
       <h2>ABOUT</h2>
-      <img src="/images/logo4.png">
-      <a href="index.html">home</a>
-      <a href="about.html">about</a>
-      <a href="work.html">work</a>
-      <a href="play.html">play</a>
+      <a class='nav' href="about.html">about</a><br>
+      <a class='nav'  href="work.html">work</a><br>
+      <a class='nav'  href="play.html">play</a><br><br>
+      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
+      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
+      <a class='nav'  href='https://twitter.com/chrisbup'>Instagram</a><br>
+      <a class='nav'  href='http://instagram.com/chrisbup'>Twitter</a><br><br>
+      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
+      <p>240.393.9747</p>
+      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
     </header>
-
     <section>
-      <a href="resume.html">resume</a>
-      <p>
-        <a href="https://twitter.com/chrisbup" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @chrisbup</a>
-        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-      </p>
-      <style>
-      .ig-b- {
-       display: inline-block;
-     }
-     .ig-b- img {
-      visibility: hidden;
-    }
-    .ig-b-:hover {
-      background-position: 0 -60px;
-    }
-    .ig-b-:active {
-      background-position: 0 -120px;
-    }
-    .ig-b-v-24 {
-      width: 137px;
-      height: 24px;
-      background: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24.png)
-      no-repeat 0 0;
-    }
-    @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-      .ig-b-v-24 {
-        background-image: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24@2x.png);
-        background-size: 160px 178px;
-      }
-    }
-    </style>
-    <a href="http://instagram.com/chrisbup?ref=badge" class="ig-b- ig-b-v-24">
-      <img src="//badges.instagram.com/static/images/ig-badge-view-24.png" alt="Instagram" />
-    </a>
+    <img src="images/ch-self.png">
+    <p>elevator pitch here</p>
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
     </footer>
