--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Chris Heuberger / web developer + designer</title>
+  <title>Chris Heuberger</title>
   <link href='http://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -10,25 +10,27 @@
 <body>
   <div class="wrapper">
     <header>
-      <img src="/images/logo4.png">
-      <h1>Chris Heuberger</h1>
-      <h2>web developer / designer / organizer</h2>
-      <a href="index.html">home</a>
-      <a href="about.html">about</a>
-      <a href="work.html">work</a>
-      <a href="play.html">play</a>
+      <a href="index.html">
+        <img class='logo' src="images/logo4.png">
+        <h1>Chris Heuberger</h1>
+      </a>
+      <h2>web developer<br>+ designer</h2>
+      <a class='nav' href="about.html">about</a><br>
+      <a class='nav'  href="work.html">work</a><br>
+      <a class='nav'  href="play.html">play</a><br><br>
+      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
+      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
+      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
+      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
+      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
+      <p>240.393.9747</p>
+      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
     </header>
 
     <section>
-      <p>A little about me: I am a full-stack web developer with a background in graphic designer.</p>
 
-      <p>I'm interested in how information is organized and presented to convey a message or to create something amazing. I see development as an essential part of design; the function behind the form that allows us to guide how people interact with technology and each other.</p>
+      <img src="images/brain-venn-diagram.png" alt="" class='main-img'>
 
-      <p>My goal in all my work is to apply principles of behavioral economics—the art and science of how we make decisions—toward design for better interaction, participation and engagement.</p>
-
-      <a href='https://github.com/ChrisBup'>GitHub</a><br>
-      <a href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a href='mailto:christopherheuberger@gmail.com'>contact me</a><br>
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
     </footer>
