--- a/resume.html
+++ b/resume.html
@@ -10,33 +10,40 @@
 <body>
   <div class="wrapper">
     <header>
-      <img src="/images/logo4.png">
-      <h1>Chris Heuberger</h1>
-      <h2>RESUME</h2>
-      <h3><a class='resume' href="#">download pdf version</a></h3>
-      <a href="index.html">home</a>
-      <a href="about.html">about</a>
-      <a href="work.html">work</a>
-      <a href="play.html">play</a>
+      <a href="index.html">
+        <img class='logo' src="images/logo4.png">
+        <h1>Chris Heuberger</h1>
+      </a>
+      <h2>R&Eacute; SUM&Eacute; </h2>
+      <a class='nav' href="about.html">about</a><br>
+      <a class='nav'  href="work.html">work</a><br>
+      <a class='nav'  href="play.html">play</a><br><br>
+      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
+      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
+      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
+      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
+      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
+      <p>240.393.9747</p>
+      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
     </header>
     <section>
 
-<h2>EXPERIENCE</h2>
+<h2 class='resume'>EXPERIENCE</h2>
 
 <h3>Art House Co-op | Brooklyn, NY</h3>
-<h4>Archivist/Curator/Manager, March 2011 – Present
-<p>As part of a small team, I helped run interactive, crowd-sourced, global art projects, primarily The Sketchbook Project, a traveling exhibition of artists’ sketchbooks from around the world. I also help manage The Brooklyn Art Library, our exhibition space and store. My responsibilities included library operation, social media content management, web store management, community outreach, event coordination, graphic design and overseeing our collection of over 30,000 sketchbooks.
+<h4>Archivist/Curator/Manager, March 2011&ndash;Present</h4>
+<p>As part of a small team, I helped run interactive, crowd-sourced, global art projects, primarily The Sketchbook Project, a traveling exhibition of artists’ sketchbooks from around the world. I also help manage The Brooklyn Art Library, our exhibition space and store. My responsibilities included library operation, social media content management, web store management, community outreach, event coordination, graphic design and overseeing our collection of over 30,000 sketchbooks.</p>
 
 <h3>T Salon | New York, NY</h3>
-<h4>Graphic Designer, October 2009 – March 2011</h4>
-<p>I served as part art director, part marketing director, part production manager for a boutique tea company located in New York and Los Angeles. I designed catalogs, custom labels, marketing collateral and promotional material. I maintained our website, created an e-newsletter, screen graphics and signage for wholesale accounts, retail locations and events.
+<h4>Graphic Designer, October 2009&ndash;March 2011</h4>
+<p>I served as part art director, part marketing director, part production manager for a boutique tea company located in New York and Los Angeles. I designed catalogs, custom labels, marketing collateral and promotional material. I maintained our website, created an e-newsletter, screen graphics and signage for wholesale accounts, retail locations and events.</p>
 
 <h3>The Madison Design Group | Bethesda, MD</h3>
-<h4>Graphic Designer, October 2005–September 2009</h4>
+<h4>Graphic Designer, October 2005&ndash;September 2009</h4>
 <p>I designed various print and web collateral such as identity systems,
 magazines, brochures, annual reports, invitations, e-newsletters and websites. I managed projects, collaborated with vendors and oversaw production for corporate and non-profit clients.</p>
 
-<h2>EDUCATION</h2>
+<h2 class='resume'>EDUCATION</h2>
 
 <h3>Virginia Tech | College of Architecture and Urban Studies | Blacksburg, VA</h3>
 <p>BFA in Graphic Design, Minor in Communication | Graduated May 2005</p><br>
@@ -44,15 +51,15 @@ magazines, brochures, annual reports, invitations, e-newsletters and websites. I
 <h3>General Assembly | New York, NY</h3>
 <p>Web Development Immersive | Graduated July 2014</p><br>
 
-<h2>SKILLS</h2>
+<h2 class='resume'>SKILLS</h2>
 
 <p>Adobe Creative Suite / Microsoft Office Suite</p>
 <p>Illustration / Photography / Copywriting</p><br>
 
-<h2>STACK</h2>
-<p>Ruby on Rails / JavaScript</p>
-<p>jQuery / AJAX / Backbone</p>
-<p>SQL / HTML / CSS</p><br>
+<h2 class='resume'>STACK</h2>
+<p>Ruby on Rails&nbsp;/&nbsp;JavaScript</p>
+<p>jQuery&nbsp;/&nbsp;AJAX&nbsp;/&nbsp;Backbone</p>
+<p>SQL&nbsp;/&nbsp;HTML&nbsp;/&nbsp;CSS</p><br>
 
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
