--- a/work.html
+++ b/work.html
@@ -10,15 +10,27 @@
 <body>
   <div class="wrapper">
     <header>
-      <img src="/images/logo4.png">
-      <h1>Chris Heuberger</h1>
+      <a href="index.html">
+        <img class='logo' src="images/logo4.png">
+        <h1>Chris Heuberger</h1>
+      </a>
       <h2>WORK</h2>
-      <a href="index.html">home</a>
-      <a href="about.html">about</a>
-      <a href="work.html">work</a>
-      <a href="play.html">play</a>
+      <a class='nav' href="about.html">about</a><br>
+      <a class='nav'  href="work.html">work</a><br>
+      <a class='nav'  href="play.html">play</a><br><br>
+      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
+      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
+      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
+      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
+      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
+      <p>240.393.9747</p>
+      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
     </header>
     <section>
+      <img src="images/curator.png">
+      <p>explain</p>
+      <img src="images/valence.png">
+      <p>explain</p>
       <footer>
         <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
       </footer>
