--- a/about.html
+++ b/about.html
@@ -28,7 +28,9 @@
     </header>
     <section>
     <img src="images/ch-self.png">
-    <p>elevator pitch here</p>
+    <p>I am a full-stack web developer with a background in graphic design. I'm interested in how information is organized and presented to convey a message or to create something amazing.</p>
+    <p>I will be gradutating from the Web Development Immersive program at General Assembly in late July 2014 and am excited to hone my new skills. What really inspired me to do GA was my last job at <a href='http://www.sketchbookproject.com/'>The Sketchbook Project</a>, a start-up that runs global, crowdsourced, interactive art projects.</p>
+    <p>I am a sponge for all things web development so if you have any advice or questions or are looking for a newbie coder who's weirdly enthusiastic about RESTful routes, closures and database queries, please <a href='mailto:chrisheuberg@gmail.com'>reach out!</a> I'd really love to hear from you.<p>
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
     </footer>
