--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <section>
 
       <img src="images/brain-venn-diagram.png" alt="" class='main-img'>
+      <h2>Warning:</h2> <h3>this is my new site and is very much a work in progress. Look for it's official update by the end of July 2014. It's gonna be so rad!</h3>
 
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
