--- a/play.html
+++ b/play.html
@@ -27,6 +27,7 @@
       <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
     </header>
     <section>
+       <h2>Design, illustration, typography projects, visual experiments, art made from code... all are coming!</h2>
       <footer>
         <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
       </footer>
