--- a/work.html
+++ b/work.html
@@ -28,9 +28,9 @@
     </header>
     <section>
       <img src="images/curator.png">
-      <p>explain</p>
+      <p>An app to guide you through the Brooklyn Museum and to never again allow someone to say, "I don't it." Deets and link to come...</p>
       <img src="images/valence.png">
-      <p>explain</p>
+      <p>An app that enables you to make a playlist and see your music in a new way with dynamic, animated data visualizations. Stay tuned for the real unveiling.</p>
       <footer>
         <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
       </footer>
