content to landing page, fix hyperlinks

--- a/development.html
+++ b/development.html
@@ -12,25 +12,37 @@
     <header>
       <a href="index.html">
         <img class='logo' src="images/logo4.png">
-        <h1>Chris Heuberger</h1>
+        <br>
       </a>
-      <h2>WORK</h2>
-      <a class='nav' href="about.html">about</a><br>
-      <a class='nav'  href="work.html">work</a><br>
-      <a class='nav'  href="play.html">play</a><br><br>
-      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
-      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
-      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
-      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
-      <p>240.393.9747</p>
-      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
+      <h3 class='nav name' href="index.html">Chris Heuberger</h3>
+      <p class='nav title' href="about.html"><small>web developer + designer</small></p><br>
+      <p><a class='nav' href="about.html">about</a></p>
+      <p><a class='nav current' href="development.html">development</a></p>
+      <p><a class='nav' href="design.html">design</a></p>
+      <p><a class='nav' href="photo.html">photo</a></p>
+      <p><a class='nav' href="play.html">play</a></p><br>
+      <p><a class='nav' href='https://github.com/ChrisBup'>GitHub</a></p>
+      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a></p>
+      <p><a class='nav' href='https://twitter.com/chrisbup'>Twitter</a></p>
+      <p><a class='nav' href='http://instagram.com/chrisbup'>Instagram</a></p><br>
+      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
+      <p><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></p>
+      <p class='number'>240.393.9747</p>
     </header>
+
     <section>
-      <img src="images/development/curator.png">
-      <p>An app to guide you through the Brooklyn Museum and to never again allow someone to say, "I don't it." Deets and link to come...</p>
-      <img src="images/development/valence.png">
-      <p>An app that enables you to make a playlist and see your music in a new way with dynamic, animated data visualizations. Stay tuned for the real unveiling.</p>
+      <h1>DEVELOPMENT</h1><br>
+      <a href="http://curator-app.herokuapp.com/"><img src="images/development/curator.png"></a>
+      <div class='caption'>
+        <h3>CURATOR</h3>
+        <p>A web app to guide you through the Brooklyn Museum and to prevent you from ever again looking at an artwork and saying, "I don't get it."</p>
+      </div>
+      <br><hr><br>
+      <a href="http://valence.herokuapp.com/"><img src="images/development/valence.png"></a>
+      <div class='caption'>
+        <h3>VALENCE</h3>
+        <p>A web app that enables you to make a playlist and see your music in a new way with dynamic, animated data visualizations.</p>
+      </div>
       <footer>
         <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
       </footer>
