--- a/photo.html
+++ b/photo.html
@@ -13,67 +13,51 @@
     <header>
       <a href="index.html">
         <img class='logo' src="images/logo4.png">
-        <h1>Chris Heuberger</h1>
+        <br>
       </a>
-      <h2>WORK</h2>
-      <a class='nav' href="about.html">about</a><br>
-      <a class='nav'  href="work.html">work</a><br>
-      <a class='nav'  href="play.html">play</a><br><br>
-      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
-      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
-      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
-      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
-      <p>240.393.9747</p>
-      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
+      <h3 class='nav name' href="index.html">Chris Heuberger</h3>
+      <p class='nav title' href="about.html"><small>web developer + designer</small></p><br>
+      <p><a class='nav' href="about.html">about</a></p>
+      <p><a class='nav' href="development.html">development</a></p>
+      <p><a class='nav' href="design.html">design</a></p>
+      <p><a class='nav current' href="photo.html">photo</a></p>
+      <p><a class='nav' href="play.html">play</a></p><br>
+      <p><a class='nav' href='https://github.com/ChrisBup'>GitHub</a></p>
+      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a></p>
+      <p><a class='nav' href='https://twitter.com/chrisbup'>Twitter</a></p>
+      <p><a class='nav' href='http://instagram.com/chrisbup'>Instagram</a></p><br>
+      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
+      <p><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></p>
+      <p class='number'>240.393.9747</p>
     </header>
     <section>
-      <img src="images/photo/fb1.jpg">
-      <hr>
-      <img src="images/photo/fb2.jpg">
-      <hr>
-      <img src="images/photo/fb3.jpg">
-      <hr>
-      <img src="images/photo/fb4.jpg">
-      <hr>
-      <img src="images/photo/fb6.jpg">
-      <hr>
-      <img src="images/photo/fb7.jpg">
-      <hr>
-      <img src="images/photo/fb8.jpg">
-      <hr>
-      <img src="images/photo/fb10.jpg">
-      <hr>
-      <img src="images/photo/fb11.jpg">
-      <hr>
-      <img src="images/photo/fb12.jpg">
-      <hr>
-      <img src="images/photo/fb13.jpg">
-      <hr>
-      <img src="images/photo/fb14.jpg">
-      <hr>
-      <img src="images/photo/fb15.jpg">
-      <hr>
-      <img src="images/photo/fb16.jpg">
-      <hr>
-      <img src="images/photo/fb17.jpg">
-      <hr>
-      <img src="images/photo/fb18.jpg">
-      <hr>
-      <img src="images/photo/fb19.jpg">
-      <hr>
-      <img src="images/photo/pic-coca-cola_sign.jpg">
-      <hr>
-      <img src="images/photo/pic-img008.jpg">
-      <hr>
-      <img src="images/photo/pic-img009.tif">
-      <hr>
-      <img src="images/photo/pic-img010.jpg">
-      <hr>
-      <img src="images/photo/pic-messagero.jpg">
-      <hr>
-      <img src="images/photo/pic-peluso.jpg">
-      <hr>
+      <h1>PHOTO</h1><br>
+        <div class='grid'>
+        <img src="images/photo/fb1.jpg">
+        <img src="images/photo/fb2.jpg">
+        <img src="images/photo/fb3.jpg">
+        <img src="images/photo/fb4.jpg">
+        <img src="images/photo/fb6.jpg">
+        <img src="images/photo/fb7.jpg">
+        <img src="images/photo/fb8.jpg">
+        <img src="images/photo/fb10.jpg">
+        <img src="images/photo/fb11.jpg">
+        <img src="images/photo/fb12.jpg">
+        <img src="images/photo/fb13.jpg">
+        <img src="images/photo/fb14.jpg">
+        <img src="images/photo/fb15.jpg">
+        <img src="images/photo/fb16.jpg">
+        <img src="images/photo/fb17.jpg">
+        <img src="images/photo/fb18.jpg">
+        <img src="images/photo/fb19.jpg">
+        <img src="images/photo/pic-coca-cola_sign.jpg">
+        <img src="images/photo/pic-img008.jpg">
+        <img src="images/photo/pic-img009.jpg">
+        <img src="images/photo/pic-img010.jpg">
+        <img src="images/photo/pic-messagero.jpg">
+        <img src="images/photo/pic-peluso.jpg">
+      </div>
+      <br><hr><br>
       <a href="#top">top</a>
       <footer>
         <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
