--- a/play.html
+++ b/play.html
@@ -13,243 +13,139 @@
     <header>
       <a href="index.html">
         <img class='logo' src="images/logo4.png">
-        <h1>Chris Heuberger</h1>
+        <br>
       </a>
-      <h2>PLAY</h2>
-      <a class='nav' href="about.html">about</a><br>
-      <a class='nav'  href="work.html">work</a><br>
-      <a class='nav'  href="play.html">play</a><br><br>
-      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
-      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
-      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
-      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
-      <p>240.393.9747</p>
-      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
+      <h3 class='nav name' href="index.html">Chris Heuberger</h3>
+      <p class='nav title' href="about.html"><small>web developer + designer</small></p><br>
+      <p><a class='nav' href="about.html">about</a></p>
+      <p><a class='nav' href="development.html">development</a></p>
+      <p><a class='nav' href="design.html">design</a></p>
+      <p><a class='nav' href="photo.html">photo</a></p>
+      <p><a class='nav current' href="play.html">play</a></p><br>
+      <p><a class='nav' href='https://github.com/ChrisBup'>GitHub</a></p>
+      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a></p>
+      <p><a class='nav' href='https://twitter.com/chrisbup'>Twitter</a></p>
+      <p><a class='nav' href='http://instagram.com/chrisbup'>Instagram</a></p><br>
+      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
+      <p><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></p>
+      <p class='number'>240.393.9747</p>
     </header>
+
     <section>
+      <h1>PLAY</h1><br>
+      <div class='grid'>
       <img src="images/play/doodle002.jpg">
-      <hr>
       <img src="images/play/doodle003.jpg">
-      <hr>
       <img src="images/play/doodle005.jpg">
-      <hr>
       <img src="images/play/doodle008.jpg">
-      <hr>
       <img src="images/play/doodle011.jpg">
-      <hr>
       <img src="images/play/doodle013.jpg">
-      <hr>
       <img src="images/play/doodle014.jpg">
-      <hr>
       <img src="images/play/doodle015.jpg">
-      <hr>
       <img src="images/play/doodle016.jpg">
-      <hr>
       <img src="images/play/doodle018.jpg">
-      <hr>
       <img src="images/play/doodle019.jpg">
-      <hr>
       <img src="images/play/doodle020.jpg">
-      <hr>
       <img src="images/play/doodle021.jpg">
-      <hr>
       <img src="images/play/doodle023.jpg">
-      <hr>
       <img src="images/play/doodle025.jpg">
-      <hr>
       <img src="images/play/doodle026.jpg">
-      <hr>
       <img src="images/play/doodle030.jpg">
-      <hr>
       <img src="images/play/doodle031.jpg">
-      <hr>
       <img src="images/play/doodle032.jpg">
-      <hr>
       <img src="images/play/doodle034.jpg">
-      <hr>
       <img src="images/play/doodle036.jpg">
-      <hr>
       <img src="images/play/doodle039.jpg">
-      <hr>
       <img src="images/play/ex1.jpg">
-      <hr>
       <img src="images/play/ex2.jpg">
-      <hr>
       <img src="images/play/ex3.jpg">
-      <hr>
       <img src="images/play/ex4.jpg">
-      <hr>
       <img src="images/play/ex5.jpg">
-      <hr>
       <img src="images/play/ex6.jpg">
-      <hr>
       <img src="images/play/ex7.jpg">
-      <hr>
       <img src="images/play/ex8.jpg">
-      <hr>
       <img src="images/play/ex9.jpg">
-      <hr>
       <img src="images/play/ex10.jpg">
-      <hr>
       <img src="images/play/IMG_3824.JPG">
-      <hr>
       <img src="images/play/IMG_3826.JPG">
-      <hr>
       <img src="images/play/IMG_7141.JPG">
-      <hr>
       <img src="images/play/IMG_7145.JPG">
-      <hr>
       <img src="images/play/IMG_7148.JPG">
-      <hr>
       <img src="images/play/IMG_7150.JPG">
-      <hr>
       <img src="images/play/IMG_7152.JPG">
-      <hr>
       <img src="images/play/IMG_7153.JPG">
-      <hr>
       <img src="images/play/IMG_7154.JPG">
-      <hr>
       <img src="images/play/IMG_7155.JPG">
-      <hr>
       <img src="images/play/IMG_7158.JPG">
-      <hr>
       <img src="images/play/IMG_7159.JPG">
-      <hr>
       <img src="images/play/IMG_7165.JPG">
-      <hr>
       <img src="images/play/IMG_7166.JPG">
-      <hr>
       <img src="images/play/IMG_7168.JPG">
-      <hr>
       <img src="images/play/IMG_7169.JPG">
-      <hr>
       <img src="images/play/IMG_7170.JPG">
-      <hr>
       <img src="images/play/IMG_7171.JPG">
-      <hr>
       <img src="images/play/IMG_7173.JPG">
-      <hr>
       <img src="images/play/IMG_7176.JPG">
-      <hr>
       <img src="images/play/IMG_7178.JPG">
-      <hr>
       <img src="images/play/IMG_7179.JPG">
-      <hr>
       <img src="images/play/IMG_7180.JPG">
-      <hr>
       <img src="images/play/IMG_7182.JPG">
-      <hr>
       <img src="images/play/IMG_7184.JPG">
-      <hr>
       <img src="images/play/IMG_7187.JPG">
-      <hr>
       <img src="images/play/IMG_7193.JPG">
-      <hr>
       <img src="images/play/IMG_7194.JPG">
-      <hr>
       <img src="images/play/IMG_7198.JPG">
-      <hr>
       <img src="images/play/IMG_7199.JPG">
-      <hr>
       <img src="images/play/IMG_7202.JPG">
-      <hr>
       <img src="images/play/IMG_7203.JPG">
-      <hr>
       <img src="images/play/IMG_7204.JPG">
-      <hr>
       <img src="images/play/IMG_7205.JPG">
-      <hr>
       <img src="images/play/IMG_7207.JPG">
-      <hr>
       <img src="images/play/IMG_7208.JPG">
-      <hr>
       <img src="images/play/IMG_7209.JPG">
-      <hr>
       <img src="images/play/IMG_7212.JPG">
-      <hr>
       <img src="images/play/IMG_7214.JPG">
-      <hr>
       <img src="images/play/IMG_7215.JPG">
-      <hr>
       <img src="images/play/IMG_7218.JPG">
-      <hr>
       <img src="images/play/IMG_7219.JPG">
-      <hr>
       <img src="images/play/IMG_7220.JPG">
-      <hr>
       <img src="images/play/IMG_7221.JPG">
-      <hr>
       <img src="images/play/IMG_7223.JPG">
-      <hr>
       <img src="images/play/IMG_7224.JPG">
-      <hr>
       <img src="images/play/IMG_7225.JPG">
-      <hr>
       <img src="images/play/IMG_7227.JPG">
-      <hr>
       <img src="images/play/IMG_7228.JPG">
-      <hr>
       <img src="images/play/IMG_7229.JPG">
-      <hr>
       <img src="images/play/IMG_7230.JPG">
-      <hr>
       <img src="images/play/IMG_7231.JPG">
-      <hr>
       <img src="images/play/IMG_7233.JPG">
-      <hr>
       <img src="images/play/IMG_7234.JPG">
-      <hr>
       <img src="images/play/IMG_7235.JPG">
-      <hr>
       <img src="images/play/IMG_7236.JPG">
-      <hr>
       <img src="images/play/IMG_7239.JPG">
-      <hr>
       <img src="images/play/IMG_7240.JPG">
-      <hr>
       <img src="images/play/IMG_7242.JPG">
-      <hr>
       <img src="images/play/IMG_7245.JPG">
-      <hr>
       <img src="images/play/IMG_7247.JPG">
-      <hr>
       <img src="images/play/IMG_7249.JPG">
-      <hr>
-      <img src="images/play/IMG_7252.JPG">
-      <hr>
       <img src="images/play/IMG_7254.JPG">
-      <hr>
       <img src="images/play/IMG_7259.JPG">
-      <hr>
       <img src="images/play/IMG_7262.JPG">
-      <hr>
       <img src="images/play/IMG_7265.JPG">
-      <hr>
       <img src="images/play/IMG_7266.JPG">
-      <hr>
       <img src="images/play/IMG_7269.JPG">
-      <hr>
       <img src="images/play/IMG_7270.JPG">
-      <hr>
       <img src="images/play/IMG_7271.JPG">
-      <hr>
       <img src="images/play/IMG_7273.JPG">
-      <hr>
       <img src="images/play/img001.jpg">
-      <hr>
       <img src="images/play/img003.jpg">
-      <hr>
       <img src="images/play/img004.jpg">
-      <hr>
       <img src="images/play/img005.jpg">
-      <hr>
       <img src="images/play/img006.jpg">
-      <hr>
       <img src="images/play/img007.jpg">
-      <hr>
       <img src="images/play/terrible-clothing.jpg">
-      <hr>
+      </div>
+      <br><hr><br>
       <a href="#top">top</a>
       <footer>
         <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
