--- a/about.html
+++ b/about.html
@@ -12,25 +12,42 @@
     <header>
       <a href="index.html">
         <img class='logo' src="images/logo4.png">
-        <h1>Chris Heuberger</h1>
+        <br>
       </a>
-      <h2>ABOUT</h2>
-      <a class='nav' href="about.html">about</a><br>
-      <a class='nav'  href="work.html">work</a><br>
-      <a class='nav'  href="play.html">play</a><br><br>
-      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
-      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
-      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
-      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
-      <p>240.393.9747</p>
-      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
+      <h3 class='nav name' href="index.html">Chris Heuberger</h3>
+      <p class='nav title' href="about.html"><small>web developer + designer</small></p><br>
+      <p><a class='nav current' href="about.html">about</a></p>
+      <p><a class='nav' href="development.html">development</a></p>
+      <p><a class='nav' href="design.html">design</a></p>
+      <p><a class='nav' href="photo.html">photo</a></p>
+      <p><a class='nav' href="play.html">play</a></p><br>
+      <p><a class='nav' href='https://github.com/ChrisBup'>GitHub</a></p>
+      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a></p>
+      <p><a class='nav' href='https://twitter.com/chrisbup'>Twitter</a></p>
+      <p><a class='nav' href='http://instagram.com/chrisbup'>Instagram</a></p><br>
+      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
+      <p><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></p>
+      <p class='number'>240.393.9747</p>
     </header>
+
     <section>
-    <img src="images/ch-self.png">
-    <p>I'm a recent gradutate of the Web Development Immersive program at General Assembly, a 12-week full-time dev bootcamp and I'm excited to hone my new skills as a junior developer. What really inspired me to take that on was my previous position at <a href='http://www.sketchbookproject.com/'>The Sketchbook Project</a>, a start-up that runs global, crowdsourced, interactive art projects. That's where I learned how technology can promote real interaction and engagement.</p>
-    <p>I think both development and design come down to organizing data so that it's most accessible to the user. So for me, it's all about conveying a message or presenting information as efficiently as possible.</p>
-    <p>When I'm not coding, I like to listen to podcasts on long runs, play pick-up soccer, cook mediterranean and pet any dog I meet. I keep visual journals where I collect design ideas, inspiration and make all sorts of lists. I love lists. One of my favorite experiences in life is to find myself in a new city and go exploring. I'm also fascinated by behavioral economics—how we make decisions and why we act the way we do. Ask me about it and I will talk your ear right off.</p>
+      <div class='about-sidebar'>
+        <img class='about-img' src="images/ch-self-cr.png">
+        <div class='short'>
+          <ul><h2 class='short-title'>The Short List</h2>
+            <li>&bull; political issue: climate change</li>
+            <li>&bull; guilty pleasure: showtunes</li>
+            <li>&bull; proud accomplishment: I’ve run two marathons.</li>
+            <li>&bull; embarassing secret: I own three fannie packs.</li>
+            <li>&bull; hidden talent: I can recite Hamlet's famous<br>&nbsp;&nbsp;‘to-be-or-not-to-be’ soliloquy.</li>
+            <li>&bull; odd habit: I keep diligent lists of good catch<br>&nbsp;&nbsp;phrases, band names and t-shirt ideas.</li>
+          </ul>
+        </div>
+      </div>
+    <h1 class='about'>ABOUT</h1><br>
+    <p>I'm a recent gradutate of the Web Development Immersive program at General Assembly, a 12-week full-time dev bootcamp and I'm excited to hone my new skills as a junior developer. What really inspired me to take that on was my previous position at <a href='http://www.sketchbookproject.com/'>The Sketchbook Project</a>, a start-up that runs global, crowdsourced, interactive art projects. That's where I learned how technology can promote real interaction and engagement.</p><br>
+    <p>I think both development and design come down to organizing data so that it's most accessible to the user. So for me, it's all about conveying a message or presenting information as efficiently as possible.</p><br>
+    <p>When I'm not coding, I like to listen to podcasts on long runs, play pick-up soccer, cook mediterranean and pet any dog I meet. I keep visual journals where I collect design ideas, inspiration and make all sorts of lists. I love lists. One of my favorite experiences in life is to find myself in a new city and go exploring. I'm also fascinated by behavioral economics—how we make decisions and why we act the way we do. Ask me about it and I will talk your ear right off.</p><br>
     <p>I am a sponge for all things web development so if you have any advice or questions or are looking for a newbie coder who's weirdly enthusiastic about RESTful routes, closures and database queries, please <a href='mailto:chrisheuberg@gmail.com'>reach out!</a> I'd really love to hear from you.<p>
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
