--- a/design.html
+++ b/design.html
@@ -13,227 +13,131 @@
     <header>
       <a href="index.html">
         <img class='logo' src="images/logo4.png">
-        <h1>Chris Heuberger</h1>
+        <br>
       </a>
-      <h2>WORK</h2>
-      <a class='nav' href="about.html">about</a><br>
-      <a class='nav'  href="work.html">work</a><br>
-      <a class='nav'  href="play.html">play</a><br><br>
-      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
-      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
-      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
-      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
-      <p>240.393.9747</p>
-      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
+      <h3 class='nav name' href="index.html">Chris Heuberger</h3>
+      <p class='nav title' href="about.html"><small>web developer + designer</small></p><br>
+      <p><a class='nav' href="about.html">about</a></p>
+      <p><a class='nav' href="development.html">development</a></p>
+      <p><a class='nav current' href="design.html">design</a></p>
+      <p><a class='nav' href="photo.html">photo</a></p>
+      <p><a class='nav' href="play.html">play</a></p><br>
+      <p><a class='nav' href='https://github.com/ChrisBup'>GitHub</a></p>
+      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a></p>
+      <p><a class='nav' href='https://twitter.com/chrisbup'>Twitter</a></p>
+      <p><a class='nav' href='http://instagram.com/chrisbup'>Instagram</a></p><br>
+      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
+      <p><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></p>
+      <p class='number'>240.393.9747</p>
     </header>
     <section>
-      <img src="images/design/aacc.jpg">
-      <hr>
-      <img src="images/design/abt.jpg">
-      <hr>
-      <img src="images/design/acc.jpg">
-      <hr>
-      <img src="images/design/acc2.jpg">
-      <hr>
-      <img src="images/design/acc3.jpg">
-      <hr>
-      <img src="images/design/aiga.jpg">
-      <hr>
-      <img src="images/design/aiga2.jpg">
-      <hr>
-      <img src="images/design/blockpartyflyer.jpg">
-      <hr>
-      <img src="images/design/blockpartyflyer2.jpg">
-      <hr>
-      <img src="images/design/BMZ-lettering-2.jpg">
-      <hr>
-      <img src="images/design/concept-dartboard.jpg">
-      <hr>
-      <img src="images/design/cookielogo1.jpg">
-      <hr>
-      <img src="images/design/cookielogo2.jpg">
-      <hr>
-      <img src="images/design/coookies.jpg">
-      <hr>
-      <img src="images/design/derby1.jpg">
-      <hr>
-      <img src="images/design/derby2.jpg">
-      <hr>
-      <img src="images/design/fiss-logo1.jpg">
-      <hr>
-      <img src="images/design/fiss-logo2.jpg">
-      <hr>
-      <img src="images/design/fiss-logo3.jpg">
-      <hr>
-      <img src="images/design/fiss-logo4.jpg">
-      <hr>
-      <img src="images/design/fiss-logo5.jpg">
-      <hr>
-      <img src="images/design/fiss-logo6.jpg">
-      <hr>
-      <img src="images/design/halloween-flyer.jpg">
-      <hr>
-      <img src="images/design/ht-home.jpg">
-      <hr>
-      <img src="images/design/ht-sample.jpg">
-      <hr>
-      <img src="images/design/ht-series.jpg">
-      <hr>
-      <img src="images/design/IMG_7274.JPG">
-      <hr>
-      <img src="images/design/IMG_7284.JPG">
-      <hr>
-      <img src="images/design/IMG_7290.JPG">
-      <hr>
-      <img src="images/design/IMG_7292.JPG">
-      <hr>
-      <img src="images/design/IMG_7299.JPG">
-      <hr>
-      <img src="images/design/IMG_7301.JPG">
-      <hr>
-      <img src="images/design/IMG_7307.JPG">
-      <hr>
-      <img src="images/design/IMG_7308.JPG">
-      <hr>
-      <img src="images/design/IMG_7313.JPG">
-      <hr>
-      <img src="images/design/IMG_7314.JPG">
-      <hr>
-      <img src="images/design/IMG_7315.JPG">
-      <hr>
-      <img src="images/design/IMG_7317.JPG">
-      <hr>
-      <img src="images/design/IMG_7318.JPG">
-      <hr>
-      <img src="images/design/IMG_7320.JPG">
-      <hr>
-      <img src="images/design/IMG_7325.JPG">
-      <hr>
-      <img src="images/design/IMG_7330.JPG">
-      <hr>
-      <img src="images/design/IMG_7336.JPG">
-      <hr>
-      <img src="images/design/IMG_7339.JPG">
-      <hr>
-      <img src="images/design/IMG_7340.JPG">
-      <hr>
-      <img src="images/design/IMG_7346.JPG">
-      <hr>
-      <img src="images/design/IMG_7347.JPG">
-      <hr>
-      <img src="images/design/IMG_7352.JPG">
-      <hr>
-      <img src="images/design/IMG_7354.JPG">
-      <hr>
-      <img src="images/design/IMG_7355.JPG">
-      <hr>
-      <img src="images/design/IMG_7358.JPG">
-      <hr>
-      <img src="images/design/IMG_7360.JPG">
-      <hr>
-      <img src="images/design/IMG_7362.JPG">
-      <hr>
-      <img src="images/design/IMG_7363.JPG">
-      <hr>
-      <img src="images/design/Insert-sample1.jpg">
-      <hr>
-      <img src="images/design/Insert-sample2.jpg">
-      <hr>
-      <img src="images/design/logo1.jpg">
-      <hr>
-      <img src="images/design/logo2.jpg">
-      <hr>
-      <img src="images/design/logo3.jpg">
-      <hr>
-      <img src="images/design/logo4.jpg">
-      <hr>
-      <img src="images/design/lp-flyer1.jpg">
-      <hr>
-      <img src="images/design/lp-flyer2.jpg">
-      <hr>
-      <img src="images/design/lp-flyer3.jpg">
-      <hr>
-      <img src="images/design/lp-flyer4.jpg">
-      <hr>
-      <img src="images/design/lp-flyer5.jpg">
-      <hr>
-      <img src="images/design/lp-flyer6.jpg">
-      <hr>
-      <img src="images/design/lp-flyer7.jpg">
-      <hr>
-      <img src="images/design/lp-flyer8.jpg">
-      <hr>
-      <img src="images/design/lv.jpg">
-      <hr>
-      <img src="images/design/mdg-bio.jpg">
-      <hr>
-      <img src="images/design/mdg-home.jpg">
-      <hr>
-      <img src="images/design/mdg-sample.jpg">
-      <hr>
-      <img src="images/design/mept.jpg">
-      <hr>
-      <img src="images/design/mlk1.jpg">
-      <hr>
-      <img src="images/design/mlk2.jpg">
-      <hr>
-      <img src="images/design/mlk3.jpg">
-      <hr>
-      <img src="images/design/mlk4.jpg">
-      <hr>
-      <img src="images/design/mlk5.jpg">
-      <hr>
-      <img src="images/design/mlk7.jpg">
-      <hr>
-      <img src="images/design/nyfile.jpg">
-      <hr>
-      <img src="images/design/otb-logo1.jpg">
-      <hr>
-      <img src="images/design/otb-logo2.jpg">
-      <hr>
-      <img src="images/design/otb-logo3.jpg">
-      <hr>
-      <img src="images/design/otb-logo4.jpg">
-      <hr>
-      <img src="images/design/poster-royal-we.jpg">
-      <hr>
-      <img src="images/design/poster-union-artwalk.jpg">
-      <hr>
-      <img src="images/design/poster-we-are-best.jpg">
-      <hr>
-      <img src="images/design/poster-west-egg.jpg">
-      <hr>
-      <img src="images/design/poster-whale.jpg">
-      <hr>
-      <img src="images/design/ppn-poster.jpg">
-      <hr>
-      <img src="images/design/ppn1.jpg">
-      <hr>
-      <img src="images/design/ppn2.jpg">
-      <hr>
-      <img src="images/design/ppn3.jpg">
-      <hr>
-      <img src="images/design/ppn4.jpg">
-      <hr>
-      <img src="images/design/ppn5.jpg">
-      <hr>
-      <img src="images/design/ranch-logo.jpg">
-      <hr>
-      <img src="images/design/rh-logo.jpg">
-      <hr>
-      <img src="images/design/sbp-poster1.jpg">
-      <hr>
-      <img src="images/design/sbp-poster2.jpg">
-      <hr>
-      <img src="images/design/ts-logo1.jpg">
-      <hr>
-      <img src="images/design/ts-logo2.jpg">
-      <hr>
-      <img src="images/design/type-project1.jpg">
-      <hr>
-      <img src="images/design/type-project2.jpg">
-      <hr>
+      <h1>DESIGN</h1><br>
+      <div class='grid'>
+        <img src="images/design/aacc.jpg">
+        <img src="images/design/abt.jpg">
+        <img src="images/design/acc.jpg">
+        <img src="images/design/acc2.jpg">
+        <img src="images/design/acc3.jpg">
+        <img src="images/design/aiga.jpg">
+        <img src="images/design/aiga2.jpg">
+        <img src="images/design/blockpartyflyer.jpg">
+        <img src="images/design/blockpartyflyer2.jpg">
+        <img src="images/design/BMZ-lettering-2.jpg">
+        <img src="images/design/concept-dartboard.jpg">
+        <img src="images/design/cookielogo1.jpg">
+        <img src="images/design/cookielogo2.jpg">
+        <img src="images/design/coookies.jpg">
+        <img src="images/design/derby1.jpg">
+        <img src="images/design/derby2.jpg">
+        <img src="images/design/fiss-logo1.jpg">
+        <img src="images/design/fiss-logo2.jpg">
+        <img src="images/design/fiss-logo3.jpg">
+        <img src="images/design/fiss-logo4.jpg">
+        <img src="images/design/fiss-logo5.jpg">
+        <img src="images/design/fiss-logo6.jpg">
+        <img src="images/design/halloween-flyer.jpg">
+        <img src="images/design/ht-home.jpg">
+        <img src="images/design/ht-sample.jpg">
+        <img src="images/design/ht-series.jpg">
+        <img src="images/design/IMG_7274.JPG">
+        <img src="images/design/IMG_7284.JPG">
+        <img src="images/design/IMG_7290.JPG">
+        <img src="images/design/IMG_7292.JPG">
+        <img src="images/design/IMG_7299.JPG">
+        <img src="images/design/IMG_7301.JPG">
+        <img src="images/design/IMG_7307.JPG">
+        <img src="images/design/IMG_7308.JPG">
+        <img src="images/design/IMG_7313.JPG">
+        <img src="images/design/IMG_7314.JPG">
+        <img src="images/design/IMG_7315.JPG">
+        <img src="images/design/IMG_7317.JPG">
+        <img src="images/design/IMG_7318.JPG">
+        <img src="images/design/IMG_7320.JPG">
+        <img src="images/design/IMG_7325.JPG">
+        <img src="images/design/IMG_7330.JPG">
+        <img src="images/design/IMG_7336.JPG">
+        <img src="images/design/IMG_7339.JPG">
+        <img src="images/design/IMG_7340.JPG">
+        <img src="images/design/IMG_7346.JPG">
+        <img src="images/design/IMG_7347.JPG">
+        <img src="images/design/IMG_7352.JPG">
+        <img src="images/design/IMG_7354.JPG">
+        <img src="images/design/IMG_7355.JPG">
+        <img src="images/design/IMG_7358.JPG">
+        <img src="images/design/IMG_7360.JPG">
+        <img src="images/design/IMG_7362.JPG">
+        <img src="images/design/IMG_7363.JPG">
+        <img src="images/design/Insert-sample1.jpg">
+        <img src="images/design/Insert-sample2.jpg">
+        <img src="images/design/logo1.jpg">
+        <img src="images/design/logo2.jpg">
+        <img src="images/design/logo3.jpg">
+        <img src="images/design/logo4.jpg">
+        <img src="images/design/lp-flyer1.jpg">
+        <img src="images/design/lp-flyer2.jpg">
+        <img src="images/design/lp-flyer3.jpg">
+        <img src="images/design/lp-flyer4.jpg">
+        <img src="images/design/lp-flyer5.jpg">
+        <img src="images/design/lp-flyer6.jpg">
+        <img src="images/design/lp-flyer7.jpg">
+        <img src="images/design/lp-flyer8.jpg">
+        <img src="images/design/lv.jpg">
+        <img src="images/design/mdg-bio.jpg">
+        <img src="images/design/mdg-home.jpg">
+        <img src="images/design/mdg-sample.jpg">
+        <img src="images/design/mept.jpg">
+        <img src="images/design/mlk1.jpg">
+        <img src="images/design/mlk2.jpg">
+        <img src="images/design/mlk3.jpg">
+        <img src="images/design/mlk4.jpg">
+        <img src="images/design/mlk5.jpg">
+        <img src="images/design/mlk7.jpg">
+        <img src="images/design/nyfile.jpg">
+        <img src="images/design/otb-logo1.jpg">
+        <img src="images/design/otb-logo2.jpg">
+        <img src="images/design/otb-logo3.jpg">
+        <img src="images/design/otb-logo4.jpg">
+        <img src="images/design/poster-royal-we.jpg">
+        <img src="images/design/poster-union-artwalk.jpg">
+        <img src="images/design/poster-we-are-best.jpg">
+        <img src="images/design/poster-west-egg.jpg">
+        <img src="images/design/poster-whale.jpg">
+        <img src="images/design/ppn-poster.jpg">
+        <img src="images/design/ppn1.jpg">
+        <img src="images/design/ppn2.jpg">
+        <img src="images/design/ppn3.jpg">
+        <img src="images/design/ppn4.jpg">
+        <img src="images/design/ppn5.jpg">
+        <img src="images/design/ranch-logo.jpg">
+        <img src="images/design/rh-logo.jpg">
+        <img src="images/design/sbp-poster1.jpg">
+        <img src="images/design/sbp-poster2.jpg">
+        <img src="images/design/ts-logo1.jpg">
+        <img src="images/design/ts-logo2.jpg">
+        <img src="images/design/type-project1.jpg">
+        <img src="images/design/type-project2.jpg">
+      </div>
+      <br><hr><br>
       <a href="#top">top</a>
       <footer>
         <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
