--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Chris Heuberger</title>
   <link href='http://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Radley' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/styles.css">
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
@@ -14,41 +14,37 @@
     <header>
       <a href="index.html">
         <img class='logo' src="images/logo4.png">
-        <h1>Chris Heuberger</h1>
+        <br>
       </a>
-      <h2>web developer<br>+ designer</h2>
-      <a class='nav' href="about.html">about</a><br>
-      <a class='nav'  href="development.html">dev</a><br>
-      <a class='nav'  href="design.html">design</a><br>
-      <a class='nav'  href="photo.html">photo</a><br>
-      <a class='nav'  href="play.html">play</a><br><br>
-      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
-      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
-      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
-      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
-      <p>240.393.9747</p>
-      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
+      <h3 class='nav name' href="index.html">Chris Heuberger</h3>
+      <p class='nav title' href="about.html">web developer + designer</p><br>
+      <p><a class='nav' href="about.html">about</a></p>
+      <p><a class='nav' href="development.html">development</a></p>
+      <p><a class='nav' href="design.html">design</a></p>
+      <p><a class='nav' href="photo.html">photo</a></p>
+      <p><a class='nav' href="play.html">play</a></p><br>
+      <p><a class='nav' href='https://github.com/ChrisBup'>GitHub</a></p>
+      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a></p>
+      <p><a class='nav' href='https://twitter.com/chrisbup'>Twitter</a></p>
+      <p><a class='nav' href='http://instagram.com/chrisbup'>Instagram</a></p><br>
+      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
+      <p><a class='nav' href="resume.html">r&eacute;sum&eacute;</a></p>
+      <p class='number'>240.393.9747</p>
     </header>
 
     <section>
-      <hr class='hr-left'>
-        <h2 class='interests'>INTERESTS</h2>
-      <hr class='hr-right'>
+      <h3 class='highlight'>Hi, <a href="development.html">I'm a web developer</a> with a background in graphic design. My goal is to put my overlapping passions for development, design and venn diagrams to good use. Please do say <a href='mailto:chrisheuberg@gmail.com'>hello.</a></h3>
+      <br>
+
+      <h2 class='interests'>INTERESTS</h2>
       <div class="image">
         <img src="images/brain-venn-diagram.jpg" alt="brain venn diagram" class='main-img'>
-        <div class="overlay-text">
-          <h2 class='amazing'><a class='image-nav' href="development.html">MAKING<br>SOMETHING<br>AMAZING</a></h2>
-          <h2 class='information'><a class='image-nav' href="about.html">ORGANIZING<br>INFORMATION</a></h2>
-          <h2 class='solving'><a class='image-nav' href="design.html">CREATIVE<br>PROBLEM<br>SOLVING</a></h2>
-          <h2 class='communication'><a class='image-nav' href="photo.html">COMMUNICATION</a></h2>
-          <h2 class='pizza'><a class='image-nav' href="play.html">PIZZA</a></h2>
-       </div>
+        <h2 class='amazing'><a class='image-nav' href="development.html">MAKING<br>SOMETHING<br>AMAZING</a></h2>
+        <h2 class='information'><a class='image-nav' href="about.html">ORGANIZING<br>INFORMATION</a></h2>
+        <h2 class='solving'><a class='image-nav' href="design.html">CREATIVE<br>PROBLEM<br>SOLVING</a></h2>
+        <h2 class='communication'><a class='image-nav' href="photo.html">COMMUNICATION</a></h2>
+        <h2 class='pizza'><a class='image-nav' href="play.html">PIZZA</a></h2>
      </div>
-
-      <h3 class='highlight'><font color="gray" size='5px'>OVERVIEW:</font> CHRIS HEUBERGER</h3>
-      <h3 class='highlight'><font color="aqua">I'm a web developer</font> with a background in graphic design. I'm seeking a position as an entry-level developer in a creative environment where I can put my overlapping passions for development, design and venn diagrams to good use.</h3>
-      <h3 class='highlight'>Please do say <font color="aqua"><a class='hello-nav' href='mailto:chrisheuberg@gmail.com'>hello.</a></font></h3>
 
     <footer>
       <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
