--- a/resume.html
+++ b/resume.html
@@ -12,66 +12,132 @@
     <header>
       <a href="index.html">
         <img class='logo' src="images/logo4.png">
-        <h1>Chris Heuberger</h1>
+        <br>
       </a>
-      <h2>R&Eacute; SUM&Eacute; </h2>
-      <a class='nav' href="about.html">about</a><br>
-      <a class='nav'  href="work.html">work</a><br>
-      <a class='nav'  href="play.html">play</a><br><br>
-      <a class='nav'  href='https://github.com/ChrisBup'>GitHub</a><br>
-      <a class='nav'  href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a><br>
-      <a class='nav'  href='https://twitter.com/chrisbup'>Twitter</a><br>
-      <a class='nav'  href='http://instagram.com/chrisbup'>Instagram</a><br><br>
-      <a class='nav'  href='mailto:chrisheuberg@gmail.com'>chrisheuberg@gmail.com</a><br>
-      <p>240.393.9747</p>
-      <a class='nav' href="resume.html">r&eacute;sum&eacute;</a>
+      <h3 class='nav name' href="index.html">Chris Heuberger</h3>
+      <p class='nav title' href="about.html"><small>web developer + designer</small></p><br>
+      <p><a class='nav' href="about.html">about</a></p>
+      <p><a class='nav' href="development.html">dev</a></p>
+      <p><a class='nav' href="design.html">design</a></p>
+      <p><a class='nav' href="photo.html">photo</a></p>
+      <p><a class='nav' href="play.html">play</a></p><br>
+      <p><a class='nav' href='https://github.com/ChrisBup'>GitHub</a></p>
+      <p><a class='nav' href='https://www.linkedin.com/in/chrisheuberger/'>LinkedIn</a></p>
+      <p><a class='nav' href='https://twitter.com/chrisbup'>Twitter</a></p>
+      <p><a class='nav' href='http://instagram.com/chrisbup'>Instagram</a></p><br>
+      <p><a class='nav' href='mailto:chrisheuberg@gmail.com'>email</a></p>
+      <p><a class='nav current' href="resume.html">r&eacute;sum&eacute;</a></p>
+      <p class='number'>240.393.9747</p>
     </header>
+
     <section>
+      <div class='resume-format'>
+        <h1>R&Eacute;SUM&Eacute; /
+          <a class='resume' href="files/chris-heuberger-resume-2014.pdf">(download pdf)</a>
+        </h1>
 
-<h2 class='resume'>EXPERIENCE</h2>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
 
-<h3>Art House Co-op | Brooklyn, NY</h3>
-<h4>Archivist/Curator/Manager, March 2011&ndash;Present</h4>
-<p>As part of a small team, I helped run interactive, crowd-sourced, global art projects, primarily The Sketchbook Project, a traveling exhibition of artists’ sketchbooks from around the world. I also help manage The Brooklyn Art Library, our exhibition space and store. My responsibilities included library operation, social media content management, web store management, community outreach, event coordination, graphic design and overseeing our collection of over 30,000 sketchbooks.</p>
+        <h2 class='resume'>EXPERIENCE</h2>
+        <div class='resume-shim'></div>
 
-<h3>T Salon | New York, NY</h3>
-<h4>Graphic Designer, October 2009&ndash;March 2011</h4>
-<p>I served as part art director, part marketing director, part production manager for a boutique tea company located in New York and Los Angeles. I designed catalogs, custom labels, marketing collateral and promotional material. I maintained our website, created an e-newsletter, screen graphics and signage for wholesale accounts, retail locations and events.</p>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
 
-<h3>The Madison Design Group | Bethesda, MD</h3>
-<h4>Graphic Designer, October 2005&ndash;September 2009</h4>
-<p>I designed various print and web collateral such as identity systems,
-magazines, brochures, annual reports, invitations, e-newsletters and websites. I managed projects, collaborated with vendors and oversaw production for corporate and non-profit clients.</p>
+        <h3>General Assembly / New York, NY</h3>
+        <h4>Web Development Immersive / April 2014&ndash;July 2014</h4>
+        <ul>
+          <li>completed a 12-week full-time development bootcamp that covers a broad range of topics, all with an emphasis on agile methodology</li>
+        </ul>
 
-<h2 class='resume'>EDUCATION</h2>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
 
-<h3>Virginia Tech | College of Architecture and Urban Studies | Blacksburg, VA</h3>
-<p>BFA in Graphic Design, Minor in Communication | Graduated May 2005</p><br>
+        <h3>Art House Co-op / Brooklyn, NY</h3>
+        <h4>Curator/Manager, March 2011&ndash;April 2014</h4>
+        <ul>
+          <li>helped run various interactive, crowdsourced art projects, primarily The Sketchbook Project, a traveling exhibition of books from around the world</li>
+          <li>oversaw web store and social media content for The Brooklyn Art Library</li>
+          <li>maintained and curated our collection of over 30,000 sketchbooks</li>
+          <li>designed brand and promotional materials for new projects and events</li>
+          <li>coordinated events and served as press contact for special exhibitions</li>
+        </ul>
 
-<h3>General Assembly | New York, NY</h3>
-<p>Web Development Immersive | Graduated July 2014</p><br>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
 
-<h2 class='resume'>SKILLS</h2>
+        <h3>T Salon / New York, NY</h3>
+        <h4>Graphic Designer, October 2009&ndash;March 2011</h4>
+        <ul>
+          <li>served as art director and marketing director for a boutique tea company</li>
+          <li>led our brand management as we expanded from New York to Los Angeles</li>
+          <li>designed catalogs, custom labels, and promotional material</li>
+          <li>maintained our website and designed our e-newsletters</li>
+          <li>created screen graphics and signage for retail locations and events</li>
+        </ul>
 
-<p>Adobe Creative Suite / Microsoft Office Suite</p>
-<p>Illustration / Photography / Copywriting</p><br>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
 
-<h2 class='resume'>STACK</h2>
-<p>Ruby on Rails&nbsp;/&nbsp;JavaScript</p>
-<p>jQuery&nbsp;/&nbsp;AJAX&nbsp;/&nbsp;Backbone</p>
-<p>SQL&nbsp;/&nbsp;HTML&nbsp;/&nbsp;CSS</p><br>
+        <h3>The Madison Design Group / Bethesda, MD</h3>
+        <h4>Graphic Designer, October 2005&ndash;September 2009</h4>
+        <ul>
+          <li>designed various materials for print and web such as identity systems, magazines, brochures, annual reports, invitations, e-newsletters and websites</li>
+          <li>managed projects and oversaw production for corporate and non-profit clients</li>
+        </ul>
 
-    <footer>
-      <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
-    </footer>
-  </section>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
+        <h2 class='resume'>EDUCATION</h2>
+        <div class='resume-shim'></div>
+
+        <h4>Virginia Tech | College of Architecture and Urban Studies | Blacksburg, VA</h4>
+        <p>BFA in Graphic Design, Minor in Communication | Graduated May 2005</p><br>
+
+        <h4>General Assembly | New York, NY</h4>
+        <p>Web Development Immersive | Graduated July 2014</p>
+
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
+        <h2 class='resume'>STACK</h2>
+        <div class='resume-shim'></div>
+
+        <p>Ruby on Rails / JavaScript</p>
+        <p>jQuery / AJAX / SQL</p>
+        <p>Backbone / Node / MongoDB</p>
+        <p>HTML / CSS / D3</p>
+
+        <div class='resume-shim'></div>
+        <div class='resume-shim'></div>
+
+        <h2 class='resume'>SKILLS</h2>
+        <div class='resume-shim'></div>
+
+        <p>Adobe Creative Suite</p>
+        <p>Microsoft Office Suite</p>
+        <p>GitHub version control</p>
+        <p>test driven development</p>
+        <p>pair programming</p>
+        <p>illustration</p>
+        <p>photography</p>
+        <p>copywriting</p>
+      </div>
+      <footer>
+        <p><small>Thanks for reading. &mdash; Have a <a class='quote' href="#">nice day.</a></small></p>
+      </footer>
+    </section>
   </div>
   <script>
   $(".quote").on("click", function() {
     alert("The details are not the details. They make the design. -Charles Eames");
   });
   </script>
-  </body>
-  </html>
+</body>
+</html>
 
 
